オマケページ追加

--- a/test02_ty.html
+++ b/test02_ty.html
@@ -13,5 +13,10 @@
          <img src="./img/ty0201.png" alt="Thanks!">
         </div>
         <script type="text/javascript" src="./js/test02_ty.js"></script>
+        <div class="door">
+         <a href="test02_omake.html">
+         <img src="./img/扉2-7510283e7346973824173f4ae6a32122_t.png" alt="door">
+         </a>
+        </div>
      </body>
   </html>
